<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".Fragmentos.FragmentPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel_end">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_perfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_perfil"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:layout_centerHorizontal="true"
            app:civ_border_color="#FF000000"
            android:scaleType="centerCrop"/>

        <TextView
            android:text="@string/txt_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_perfil"
            android:layout_marginStart="20dp"
            android:id="@+id/txt_nombre"/>

        <TextView
            android:text="@string/tv_nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_perfil"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:id="@+id/tv_nombres"/>

        <!-- email -->
        <TextView
            android:text="@string/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tv_nombres"
            android:layout_marginStart="20dp"
            android:id="@+id/txt_email"/>

        <TextView
            android:text="@string/tv_email"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_nombres"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:id="@+id/tv_email"/>

        <!-- proveedor -->

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/txt_proveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_email"
            android:layout_marginStart="20dp"
            android:id="@+id/txt_proveedor"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/tv_proveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_email"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:id="@+id/tv_proveedor"/>

        <!-- proveedor -->

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/txt_mienbro_Desde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_proveedor"
            android:layout_marginStart="20dp"
            android:id="@+id/txt_mienbro_Desde"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/tv_mienbro_Desde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_proveedor"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:id="@+id/tv_mienbro_Desde"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:cornerRadius="8dp"
            android:layout_gravity="center"
            android:id="@+id/btnActualizar"
            android:text="@string/btnActualizar"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_marginTop="140dp"
            android:layout_below="@id/tv_mienbro_Desde"
            android:textAllCaps="true"
            app:backgroundTint="@color/btn_primary"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:cornerRadius="8dp"
            android:layout_gravity="center"
            android:id="@+id/btn_logout"
            android:text="@string/btn_logout"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_below="@id/btnActualizar"
            android:textAllCaps="true"
            app:backgroundTint="@color/btn_primary"/>

    </RelativeLayout>
</ScrollView>