<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    tools:context=".Fragmentos.FragmentBalance">

    <TextView
        android:id="@+id/txtbalanceDeuda"
        android:text="@string/txtbalanceDeuda"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:textColor="@color/btn_primary"
        android:textSize="20sp"
        android:padding="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TILSueldoMensual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtbalanceDeuda"
        android:padding="10dp">

        <EditText
            android:id="@+id/etSueldoMensual"
            android:maxLines="1"
            android:textSize="20sp"
            android:hint="@string/etSueldoMensual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TILValor"
        android:layout_below="@+id/TILSueldoMensual"
        android:padding="10dp">

        <EditText
            android:id="@+id/etDeudas"
            android:hint="@string/etDeudas"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_guardar_informacion"
            android:src="@drawable/ic_check"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_centerInParent="true"
            android:layout_width="70dp"
            android:layout_height="70dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@id/iv_guardar_informacion"
            android:text="@string/txtGuardarBalanceDeuda"/>
    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>