<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/item_descripcion"
                android:text="@string/item_descripcion"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/ivActualizar"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_edit"
                android:layout_marginEnd="40dp"
                android:layout_width="25dp"
                android:layout_height="25dp"/>

            <ImageView
                android:id="@+id/ivEliminarMov"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_delete"
                android:layout_marginEnd="10dp"
                android:layout_width="25dp"
                android:layout_height="25dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/item_valor"
            android:text="@string/item_valor"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/item_tipo"
            android:text="@string/item_tipo"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>