<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".EditarInformacion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/toolbarRL">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibRegregar"
            android:src="@drawable/ic_back"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_titulo_update"
            android:id="@+id/txt_titulo_update"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/perfilRL"
                android:layout_centerHorizontal="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/ivPerfil"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_perfil"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_editar"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/ivEditarImg"/>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilNombres"
                android:layout_below="@id/perfilRL"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:id="@+id/et_nombres"
                    android:hint="@string/et_nombres"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilNombres"
                android:layout_marginTop="80dp"
                android:layout_alignParentBottom="true"
                android:id="@+id/btnActualizar"
                android:textAllCaps="true"
                android:text="@string/btnActualizar"/>

        </RelativeLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>